# rpi_zero_llm_bot

./: .env.example  .gitignore  Cargo.toml  README.md  arm_compile.sh  start.sh
.github/workflows/: rust.yml
src/: main.rs
