[package]
name = "rpi_zero_llm_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
